Fixed hero mobile spacing

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -415,7 +415,7 @@ body {
 
 .hero-icons-row {
   position: absolute;
-  top: 50%;
+  top: 53%;
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
